<resources>
    <string name="app_name">Reddit_Application</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="confirm_password_prompt">Please confirm your password:</string>
    <string name="error_prefix">"Please "</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="error_name">enter a username</string>
    <string name="error_password">enter a password</string>
    <string name="password_mismatch">enter the same password twice</string>
    <string name="todo_prompt">Enter todo details:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="action_new">New Todo</string>
    <string name="action_sync">Sync</string>
    <string name="action_reddit">Reddit</string>
    <string name="action_logout">Log Out</string>
    <string name="action_login">Log In</string>
    <string name="login_title">Please log in or sign up to sync your todos to your account.</string>
    <string name="no_items">No items, click + to started adding todos.</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in">Welcome, %1$s</string>
</resources>
