<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"

        android:title="@string/action_new">
    </item>

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_action_refresh"

        android:title="@string/action_sync">
    </item>

    <item
        android:id="@+id/action_reddit"
        android:icon="@drawable/ic_action_reddit"

        android:title="@string/action_reddit">
    </item>

    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout">
    </item>

    <item
        android:id="@+id/action_login"
        android:showAsAction="never"
        android:title="@string/action_login">
    </item>

</menu>